Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Admin message
Equinix is shutting down its operations with us on April 30, 2025. They have graciously supported us for almost 5 years, but all good things come to an end.
Given the time frame, it's going to be hard to make a smooth transition of the cluster to somewhere else (TBD). Please expect in the next months some hiccups in the service and probably at least a full week of downtime to transfer gitlab to a different place.
All help is appreciated.
[bisected]Blank laptop console after inactivity timeout
Boot to console (not X), after laptop screen goes blank due to inactivity, touch a key to get display back. Laptop backlight comes on but nothing is displayed. HDMI display comes back as it should.
git bisect says "first bad commit: [9127daa0a8d88a6e6452eb8b7c9be4c3f42a867e] drm/amd/display: Guard ASSR with internal display flag".
Previous commit is 6c8e1f3b95a2. I can "fix" the bug at 5.13-rc5 by
git diff 9127daa0a8d8 6c8e1f3b95a2|patch -p1
I have 3 AMD systems but only the laptop has the blank screen bug. It is an HP model 15-bw040AU, Product Id 1ZH49PA#ABG.
patching file drivers/gpu/drm/amd/display/dc/core/dc_link_dp.cHunk #1 succeeded at 1682 with fuzz 1 (offset -78 lines).Hunk #2 FAILED at 1804.Hunk #3 FAILED at 1841.2 out of 3 hunks FAILED -- saving rejects to file drivers/gpu/drm/amd/display/dc/core/dc_link_dp.c.rej
I have attached .rej and .orig files. I am trying to patch Linus's master, latest commit of dc_link_dp.c appears to be 0eda55ca52c3. Makefile says 5.13.rc7
I can confirm the bug is fixed at Linux 5.14.0-rc3. However, it is not fixed at Linux 5.13.7 although the fix is now tiny patch.txt
BTW this is my .config config.txt